--- a/icon-net-web/public/index.html
+++ b/icon-net-web/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/assets/images/logo-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/images/logo-icon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +24,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <link rel="stylesheet" href="%PUBLIC_URL%/bootstrap/bootstrap.min.css"/>
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/app.css?v=1"/>
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/toastr.min.css"/>
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/coolicons.css?v=2"/>
+    
+    <script src="%PUBLIC_URL%/assets/js/jquery-3.4.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/jquery-ui.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/bootstrap.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/toastr.min.js"></script>
+    <title>ICON-NET</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
